crates/cli/tests/snapshots/cli_tests__cli_tests__exposed_not_defined.snap
---
source: crates/cli/tests/cli_tests.rs
assertion_line: 899
expression: cli_check_out.normalize_stdout_and_stderr()
---

── MISSING DEFINITION in tests/test-projects/known_bad/ExposedNotDefined.roc ───

bar is listed as exposed, but it isn't defined in this module.

You can fix this by adding a definition for bar, or by removing it
from exposes.

────────────────────────────────────────────────────────────────────────────────

1 error and 0 warning found in <ignored for test> ms

