crates/cli/tests/snapshots/cli_tests__cli_tests__known_type_error_with_long_path.snap
---
source: crates/cli/tests/cli_tests.rs
assertion_line: 883
expression: cli_check_out.normalize_stdout_and_stderr()
---

── UNUSED IMPORT in ...nown_bad/UnusedImportButWithALongFileNameForTesting.roc ─

Symbol is imported but not used.

3│  import Symbol exposing [Ident]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Since Symbol isn't used, you don't need to import it.

────────────────────────────────────────────────────────────────────────────────

0 error and 1 warning found in <ignored for test> ms

